New support: answer anonymously for admins

--- a/www/moderation/inner.html
+++ b/www/moderation/inner.html
@@ -17,6 +17,6 @@ SPDX-License-Identifier: AGPL-3.0-or-later
 </head>
 <body class="cp-app-moderation">
     <div id="cp-toolbar" class="cp-toolbar-container"></div>
-    <div id="cp-content-container"></div>
+    <div id="cp-sidebarlayout-container"></div>
 </body>
 
