Make newadmin default

--- a/www/admin/index.html
+++ b/www/admin/index.html
@@ -17,4 +17,5 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <link href="/customize/src/outer.css?ver=1.3.2" rel="stylesheet" type="text/css">
 </head>
 <body>
+<noscript></noscript>
 <iframe-placeholder>
