--- a/www/admin/inner.html
+++ b/www/admin/inner.html
@@ -19,4 +19,4 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <div id="cp-toolbar" class="cp-toolbar-container"></div>
     <div id="cp-sidebarlayout-container"></div>
 </body>
-
+</html>
