start adding toolbar

--- a/www/tiptap/inner.html
+++ b/www/tiptap/inner.html
@@ -21,6 +21,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
 
 <body class="cp-app-tiptap">
     <div id="cme_toolbox" class="cp-toolbar-container"></div>
+    <div id="cp-tiptap-toolbar"></div>
     <div id="cp-app-tiptap-editor"></div>
 </body>
 
