--- a/customize.dist/features.html
+++ b/customize.dist/features.html
@@ -15,6 +15,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <script src="/customize/pre-loading.js?ver=1.1"></script>
     <link href="/customize/src/pre-loading.css?ver=1.0" rel="stylesheet" type="text/css">
     <script async data-bootload="/customize/template.js" data-main="/common/boot.js?ver=1.0" src="/components/requirejs/require.js?ver=2.3.7"></script>
+    <script src="/customize/fonts/lucide.js"></script>
 </head>
 <body class="html">
 <noscript></noscript>
