update slide controls

--- a/www/slide/inner.html
+++ b/www/slide/inner.html
@@ -26,13 +26,13 @@ SPDX-License-Identifier: AGPL-3.0-or-later
         <div class="cp-app-slide-viewer" tabindex="2">
             <div id="cp-app-slide-modal">
                 <div id="cp-app-slide-modal-exit" class="cp-app-slide-modal-button">
-                    <span class="fa fa-times"></span>
+                    <i data-lucide="x"></i>
                 </div>
                 <div id="cp-app-slide-modal-left" class="cp-app-slide-modal-button">
-                    <span class="fa fa-chevron-left"></span>
+                    <i data-lucide="chevron-left"></i>
                 </div>
                 <div id="cp-app-slide-modal-right" class="cp-app-slide-modal-button">
-                    <span class="fa fa-chevron-right"></span>
+                    <i data-lucide="chevron-right"></i>
                 </div>
                 <div id="cp-app-slide-modal-content"></div>
             </div>
