--- a/www/todo/inner.html
+++ b/www/todo/inner.html
@@ -20,7 +20,9 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <div id="cp-app-todo-container">
         <div class="cp-app-todo-create-form">
             <input type="text" id="cp-app-todo-newtodo" data-localization-placeholder="todo_newTodoNamePlaceholder" />
-            <button class="btn btn-success fa fa-plus" data-localization-title="todo_newTodoNameTitle"></button>
+            <button class="btn btn-success" data-localization-title="todo_newTodoNameTitle">
+                <i data-lucide="plus" aria-hidden="true"></i>
+            </button>
         </div>
         <div id="cp-app-todo-taskslist"></div>
     </div>
