--- a/www/drive/index.html
+++ b/www/drive/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: AGPL-3.0-or-later
     <link href="/customize/src/pre-loading.css?ver=1.0" rel="stylesheet" type="text/css">
     <script async data-bootload="main.js" data-main="/common/boot.js?ver=1.0" src="/components/requirejs/require.js?ver=2.3.7"></script>
     <link href="/customize/src/outer.css?ver=1.3.2" rel="stylesheet" type="text/css">
-    <script src="/customize/fonts/lucide.js"></script>
+    <script src="/customize/lucide.js"></script>
 </head>
 <body>
 <noscript></noscript>
